# 42-python_module_00

./: .gitignore  justfile  pyproject.toml
src/ex1/: ft_garden_name.py
src/ex2/: ft_plot_area.py
src/ex3/: ft_harvest_total.py
src/ex4/: ft_plant_age.py
src/ex5/: ft_water_reminder.py
src/ex6/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
src/ex7/: ft_seed_inventory.py
tools/: run.py
