[project]
name = "42-python-module-00"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "ruff>=0.15.11",
    "flake8>=7.3.0",
]

[tool.ruff]
line-length = 79
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

